--- a/mock-app/values.yaml
+++ b/mock-app/values.yaml
@@ -1,6 +1,6 @@
 appName: mock-app
-message: "Interesting learning curve, keep going ! You rumo"
+message: "Interesting learning curve, keep going ! You rumo1"
 image:
   repository: benmalekarim/mock-app
-  tag: v1.1.0
+  tag: v1.2.0
 replicas: 2
